[package]
name = "mi-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
bevy = { version = "0.12.1", default-features = false, features = [ 
    "bevy_asset",
    "animation",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
]}

bevy-inspector-egui = "0.22.0"
bevy-tnua = "0.14.0"
bevy-tnua-rapier3d = "0.1.0"
bevy_rapier3d = "0.23.0"
iyes_progress = { version = "0.10.0", features = ["assets", "debug"] }
bevy_ggrs = "0.14"
bevy_matchbox = { git="https://github.com/johanhelsing/matchbox", features = ["ggrs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ggrs = { version = "0.14", features=["wasm-bindgen"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#[replace]
#"bevy_animation@0.12.1" = {path = "./crates/bevy_custom_animation"}
